	Fix custom Working folder
	Fix screen turn black when syncing and/or building
	
	[LANGUAGE]
	Added Spanish translation (partial)
	Upcoming Italian translation ;D

##v0.83.31##
	[MAIN]
	Themes support!!
	After killing a page, you will stay on the same page
	Customization center: Options > Customize
		Includes modification of Theme, Language. 
		Inlcudes switches for PIL, Omega and Debug.
		Includes MissingTools shortcut
	Support switching versions/modes without restart
	Support switching debug mode without restart
	Customize tab is more polished now
	Finally fixed all recompile bugs!
	Reduced UTILS size with 1,5+ MB
	Right click tabs is now supported > Shows all tabs
	Some tabs now have the X (close) button in the tab itsself
	Home tab will open first
	AUTO update check
	Updating updated (LOL)

	[INTERNAL]
	Some fixes for future bugs :P
	New filechooser classes
	
	[IMAGE]
	Resize fix (2x)
	Convert fix

	[DEVELOP]
	Prepare Building fix
	Build fix
	Prepare Building support for Fedora
	Building support for Fedora (^^)

	[APK]
	DeCompile fix
	Newer apktool.jar
	FAAPT: Faster compiling AND smaller size

	[ADVANCED]
	Compile fix
	BakSmali fix

	[ANDROID]
	Logcat saving
	Logcat pause/resume

	[OMEGA]
	Bouncing switch (moving indicators when any set to occupied space)
	Clock location done
	A LOT of bugfixes

	[OPTIONS]
	Customize theme chooser is now in a scrolled window - more themes


##v0.83.35##
	[MAIN]
	Included an advertisement banner to keep this project running
	To view the advertisement, please install WebKit (Home>MissingTools)

	[IMAGE]
	Theme a complete APK and repackage it - all in one step! Included in Image>Theme

	[ADVANCED]
	Quick start on Aroma installer menu  ;)

	[APK]
	Option to install the framework-res.apk to the system when (de)compiling framework APKs

	[OMEGA]
	Fixed a few bugs
	Updated to newest template
	

Feature requests are always welcome :)
Also, if you want to contribute, don't hestitate to contact me!

0.83.31